<resources>
    <string name="app_name">Avrora Flowers</string>
    <string name="main_item_nav">Главный</string>
    <string name="cart_item_nav">Корзина</string>
    <string name="catalog_item_nav">Каталог</string>
    <string name="orders_item_nav">Заказы</string>
    <string name="create_order">Оформить заказ</string>
    <string name="repeat_last_order">Повторить прошлый заказ</string>
    <string name="load_order">Загрузить заказ</string>
    <string name="hello">Здравствуйте,\n%1$s</string>
    <string name="date">%1$s.%2$s.%3$d</string>
    <string name="pick_date_message">Уважаемый %s, вы не выбрали дату загрузки!</string>
    <string name="pick_date_positive">Выбрать</string>
    <string name="cancel">Отмена</string>
    <string name="error_send_order">Оформление заказа не завершено</string>
    <string name="send_order">Заказ передан на обработку</string>


    <string name="confirm_order_message">Оформление заказа на дату <b>%s</b>, пункт вывоза - <b>%s</b>.</string>
    <string name="confirm">Подтвердить</string>

    <string name="continue_b">Продолжить</string>

    <string name="empty_cart">Ваша корзина пуста\nВы можете перейти в каталог для добавления товаров</string>
    <string name="confirm_exit_message">Вы действительно хотите выйти из приложения?</string>

    <string name="yes">Да</string>
    <string name="no">Нет</string>


    <string name="contacts">Контакты</string>
    <string name="about">О компании</string>
    <string name="login">Вход</string>
    <string name="register">Регистрация</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="phone_number">Телефон</string>
    <string name="skype">Skype</string>
    <string name="to_register_b">Зарегистрироваться</string>
    <string name="to_login_b">Войти</string>
    <string name="email_validation_msg">Некорректный Email</string>
    <string name="name_validation_msg">Некорректный ввод</string>
    <string name="password_validation_msg">Не менее 5 символов</string>
    <string name="user_exist_msg">Пользователь с таким Email уже зарегистрирован</string>
    <string name="error_connection">Проблемы с соединением, попробуйте позже</string>
    <string name="search">Поиск</string>
    <string name="select_all_products">Выбрыть все товары</string>
    <string name="products_select">Товаров выбрано - %s</string>
    <string name="send">Отправить</string>
    <string name="save">Сохранить</string>
    <string name="add_to_cart">Добавить в корзину</string>
    <string name="amsterdam">Амстердам</string>
    <string name="delete">Удалить</string>
    <string name="pick_all_products">Выбрать все товары</string>
    <string name="to_catalog">В каталог</string>
    <string name="login_for_order">Авторизоваться \nдля заказа</string>
    <string name="exit_profile">Выйти из профиля?</string>
    <string name="login_nf">Войти</string>
    <string name="autorization_message_cart">Для просмотра корзины необходимо выполнить вход в свой профиль</string>
    <string name="autorization_message_orders">Для просмотра истории заказов необходимо выполнить вход в свой профиль</string>
    <string name="please_wait">Пожалуйста подождите...</string>
    <string name="load_last_order">Повтор прошлого заказа</string>
    <string name="load_last_order_message">Товары из прошлого заказа будут загружены в корзину, а имеющиеся в корзине удалены.
        Вы уверены, что хотите продолжить?
    </string>
    <string name="load_saved_order">Товары из заказа будут загружены в корзину, а имеющиеся в корзине удалены. Вы уверены, что хотите продолжить?
    </string>
    <string name="delete_title">Удаление</string>
    <string name="delete_message">Удалить товары из корзины?</string>
    <string name="ok">Ок</string>
    <string name="name_order">Имя заказа</string>
    <string name="save_cart_message">Введите название сохраняемого заказа. Товары в корзине будут сохранены для
        дальнейшей загрузки в нее из списка сохраненных заказов под этим названием.
    </string>
    <string name="saved_orders">Сохраненные заказы</string>
</resources>
