<?xml version="1.0" encoding="utf-8"?>
<navigation
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/navigation_graph"
        app:startDestination="@id/navigation_main">

    <fragment android:id="@+id/navigation_main" android:name="com.ltn.avroraflowers.ui.fragments.MainFragment"
              android:label="MainFragment"/>
    <fragment android:id="@+id/navigation_cart" android:name="com.ltn.avroraflowers.ui.fragments.CartFragment"
              android:label="@string/cart_item_nav"/>
    <fragment android:id="@+id/navigation_catalog" android:name="com.ltn.avroraflowers.ui.fragments.CatalogFragment"
              android:label="@string/catalog_item_nav"/>
    <fragment android:id="@+id/navigation_orders" android:name="com.ltn.avroraflowers.ui.fragments.OrdersFragment"
              android:label="@string/orders_item_nav"/><action android:id="@+id/action_global_navigation_main" app:destination="@id/navigation_main"/>
</navigation>