<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <include layout="@layout/toolbar"/>

    <androidx.core.widget.NestedScrollView
            android:layout_marginTop="?attr/actionBarSize"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputNameLayoutRegister"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:layout_constraintVertical_chainStyle="packed"
                    android:layout_marginTop="18dp" app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/textInputLastNameLayoutRegister">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nameEditRegister"
                        android:imeOptions="actionNext"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:singleLine="true"
                        android:hint="@string/name"
                        app:cornerRadius="4dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLastNameLayoutRegister"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:layout_constraintTop_toBottomOf="@+id/textInputNameLayoutRegister"
                    android:layout_marginTop="8dp">
                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/lastNameEditRegister"
                        android:imeOptions="actionNext"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:singleLine="true"
                        android:hint="@string/last_name"
                        app:cornerRadius="4dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputNumberLayoutRegister"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLastNameLayoutRegister"
                    android:layout_marginTop="8dp">
                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/numberEditRegister"
                        android:imeOptions="actionNext"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:singleLine="true"
                        android:hint="@string/phone_number"
                        app:cornerRadius="4dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputEmailLayoutRegister"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:layout_constraintTop_toBottomOf="@+id/textInputNumberLayoutRegister"
                    android:layout_marginTop="8dp">
                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emailEditRegister"
                        android:imeOptions="actionNext"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:singleLine="true"
                        android:hint="@string/email"
                        app:cornerRadius="4dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputPasswordLayoutRegister"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:layout_constraintTop_toBottomOf="@+id/textInputEmailLayoutRegister"
                    android:layout_marginTop="8dp">
                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emailPasswordRegister"
                        android:imeOptions="actionNext"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:singleLine="true"
                        android:hint="@string/password"
                        app:cornerRadius="4dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputSkypeLayoutRegister"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:layout_constraintTop_toBottomOf="@+id/textInputPasswordLayoutRegister"
                    android:layout_marginTop="8dp">
                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/skypeEditRegister"
                        android:imeOptions="actionDone"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:singleLine="true"
                        android:hint="@string/skype"
                        app:cornerRadius="4dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/confRegisterButton"
                    android:text="@string/to_register_b"
                    android:layout_width="300dp"
                    android:layout_height="64dp"
                    android:singleLine="true"
                    style="@style/ButtonColorFill"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputSkypeLayoutRegister"
                    android:layout_marginTop="16dp"
                    app:cornerRadius="4dp"/>

            <include layout="@layout/contacts_about_buttons_layout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/include"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="1.0"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/confRegisterButton"
                     android:layout_marginBottom="4dp" android:layout_marginTop="14dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>