<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
             android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputEmailLayoutLogin"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/textInputPasswordLayoutLogin"
                app:layout_constraintVertical_chainStyle="packed">
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailEditLogin"
                    android:imeOptions="actionNext"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:singleLine="true"
                    android:hint="@string/email"
                    app:cornerRadius="4dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputPasswordLayoutLogin"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintTop_toBottomOf="@+id/textInputEmailLayoutLogin"
                app:passwordToggleEnabled="true"
                android:layout_marginTop="8dp">
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordEditLogin"
                    android:imeOptions="actionDone"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:singleLine="true"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    app:cornerRadius="4dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputPasswordLayoutLogin"
                android:layout_marginTop="16dp">

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/confLoginButton"
                    android:text="@string/to_login_b"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="300dp"
                    android:layout_height="64dp"
                    android:singleLine="true"
                    style="@style/ButtonColorFill"
                    app:cornerRadius="4dp"/>

            <androidx.core.widget.ContentLoadingProgressBar
                    style="?android:attr/progressBarStyle"
                    android:indeterminate="true"
                    android:indeterminateTintMode="src_atop"
                    android:indeterminateTint="@android:color/white"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:id="@+id/progressBarInLoginButton"/>
        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>